RESOLVED FIXED57911
[Chromium] Fix relocation problem of popup window which introduces autofill popup sometimes moves to screen's top left corner.
https://bugs.webkit.org/show_bug.cgi?id=57911
Summary [Chromium] Fix relocation problem of popup window which introduces autofill p...
Naoki Takano
Reported 2011-04-05 18:10:18 PDT
[Chromium] Fix relocation problem of popup window which introduces autofill popup sometimes moves to screen's top left corner.
Attachments
Patch (3.13 KB, patch)
2011-04-05 18:18 PDT, Naoki Takano
no flags
Patch (3.19 KB, patch)
2011-04-06 11:52 PDT, Naoki Takano
no flags
Naoki Takano
Comment 1 2011-04-05 18:18:29 PDT
Naoki Takano
Comment 2 2011-04-05 18:21:04 PDT
Comment on attachment 88347 [details] Patch Please review.
Nico Weber
Comment 3 2011-04-05 18:59:20 PDT
None of use are reviewers. I'm cc'ing tkent, who reviewed https://bugs.webkit.org/show_bug.cgi?id=51382 In general, manual tests are bad. Is there any way to turn this into an automated test?
Naoki Takano
Comment 4 2011-04-05 19:01:06 PDT
I agree. But I already ask Ilya but he says he doesn't know. I believe there is no automation test for popup window layout, right?
Ilya Sherman
Comment 5 2011-04-06 00:36:03 PDT
Comment on attachment 88347 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=88347&action=review > Source/WebCore/ChangeLog:5 > + [Chromium] Fix relocation problem of popup window which introduces autofill popup sometimes moves to screen's top left corner. nit: ' -> ' > Source/WebCore/ChangeLog:6 > + https://bugs.webkit.org/show_bug.cgi?id=57911 nit: Please add a link to the Chromium bug.
Naoki Takano
Comment 6 2011-04-06 11:52:18 PDT
Naoki Takano
Comment 7 2011-04-06 11:52:39 PDT
Comment on attachment 88475 [details] Patch Please review again.
Naoki Takano
Comment 8 2011-04-06 23:51:07 PDT
Is there anybody who can review my patch? (In reply to comment #7) > (From update of attachment 88475 [details]) > Please review again.
WebKit Commit Bot
Comment 9 2011-04-07 18:19:15 PDT
Comment on attachment 88475 [details] Patch Clearing flags on attachment: 88475 Committed r83237: <http://trac.webkit.org/changeset/83237>
WebKit Commit Bot
Comment 10 2011-04-07 18:19:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.